# Coregistration-Qgis-processing

./: Coregistration_algorithm.py  Coregistration_plugin.py  Makefile  README.md  __init__.py  automated_global_coregistration_algorithm.py  automated_local_coregistration_algorithm.py  basic_pixel_alignment_algorithm.py  coregistration_plugin.py  coregistration_provider.py  metadata.txt  panning_pixel_adjustment_algorithm.py  pavement.py  pyproject.toml  requirements.txt  resources.py  resources.qrc
.github/workflows/: ccd-plugin-package.yml  coregistration-extlibs.yml  extlibs-packaging.yml
Coregistration/: Coregistration_provider.py  Makefile  __init__.py  metadata.txt
Coregistration/utils/: extra_deps.py
utils/: extra_deps.py  extralibs.py  load_deps.py  system_utils.py
