# pyproject.toml
#
# This file mirrors the QGIS plugin metadata (see metadata.txt) using the
# standard PEP 621 ([project]) layout, plus a [tool.qgis-plugin] table that
# preserves the QGIS-specific fields that don't have a PEP 621 equivalent.
#
# The QGIS Plugin Manager still reads `metadata.txt`; this file is provided
# to make linting, packaging and development tooling work in a standard way.

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Coregistration"
version = "26.5"
description = "Image to image automatic co-registration processing Qgis plugin."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-2.0-or-later" }
authors = [
    { name = "Xavier Corredor Llano, SMByC", email = "xavier.corredor.llano@gmail.com" },
]
dependencies = [
    "arosics>=1.12",
    "scikit-learn",
    "packaging",
]

[project.optional-dependencies]
dev = [
    "ruff",
]

[project.urls]
Homepage = "https://github.com/SMByC/Coregistration-Qgis-processing"
Repository = "https://github.com/SMByC/Coregistration-Qgis-processing"
"Bug Tracker" = "https://github.com/SMByC/Coregistration-Qgis-processing/issues"
Changelog = "https://github.com/SMByC/Coregistration-Qgis-processing/releases"

# ---------------------------------------------------------------------------
# Setuptools configuration: declare the plugin as a Python package so it can
# be installed/discovered as a regular distribution if desired.
# ---------------------------------------------------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["Coregistration*"]
exclude = ["extlibs*", "docs*", "tests*"]

[tool.setuptools.package-data]
Coregistration = [
    "metadata.txt",
    "icons/*.svg",
    "resources.qrc",
]

# ---------------------------------------------------------------------------
# Linting / formatting tool configuration
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 120
# extlibs/ is the bundled dependency folder; resources.py is auto-generated.
extend-exclude = ["extlibs", "resources.py"]

[tool.ruff.lint]
preview = true
explicit-preview-rules = true
select = ["E", "W", "F", "I", "UP", "B", "C4", "RUF", "SIM"]
extend-select = ["E226"]
ignore = [
    "B904",    # raise-without-from-inside-except (contextual)
    "SIM102",  # use single if (readability preference)
    "SIM105",  # use contextlib.suppress (readability preference)
    "SIM115",  # NamedTemporaryFile used intentionally as named path for GDAL
]

[tool.ruff.lint.per-file-ignores]
# resources.py is auto-generated by pyrcc5/pyside6-rcc – never lint it.
"resources.py" = ["ALL"]

[tool.ruff.lint.isort]
# Ordering: stdlib → third-party (qgis, osgeo, …) → first-party (Coregistration).
known-third-party = ["qgis", "osgeo", "arosics", "rasterio", "sklearn", "packaging"]
known-first-party  = ["Coregistration"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
